--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.PhoneStore" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 
     <style name="Theme.PhoneStore" parent="Base.Theme.PhoneStore" />
+
 </resources>
